@@ -7,7 +7,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
 (function(Util, DOM){
     'use strict';
     
-    var Config, Modules;
+    var Config, Modules, FileTemplate;
     
     /* Клиентский обьект, содержащий функциональную часть*/
     var CloudCmd = {
@@ -44,6 +44,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
         LIBDIR                  : '/lib/',
         LIBDIRCLIENT            : '/lib/client/',
         JSONDIR                 : '/json/',
+        HTMLDIR                 : '/html/',
         /* height of Cloud Commander
         * seting up in init()
         */
@@ -378,26 +379,30 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
         CloudCmd.KeyBinding();
     }
     
-    CloudCmd.getConfig              = function(pCallBack){
-        Util.ifExec(Config, pCallBack, function(pCallBack){
-            DOM.ajax({
-                url     : CloudCmd.JSONDIR + 'config.json',
-                success : function(pConfig){
-                    Config = pConfig;
-                    Util.exec(pCallBack, pConfig);
-                }
-            });
-        });
-    };
     
-    CloudCmd.getModules             = function(pCallBack){
-        Util.ifExec(Modules, pCallBack, function(pCallBack){
-            DOM.ajax({
-                url     : CloudCmd.JSONDIR + 'modules.json',
-                success : Util.retExec(pCallBack)
+    function getSystemFile(pGlobal, pURL){
+        
+        function lGetSysFile(pCallBack){
+            Util.ifExec(pGlobal, pCallBack, function(pCallBack){
+                DOM.ajax({
+                    url     : pURL,
+                    success : function(pLocal){
+                        pGlobal = pLocal;
+                        Util.exec(pCallBack, pLocal);
+                    }
+                });
             });
-        });
-    };
+        }
+        
+        return lGetSysFile;
+    }
+    
+    
+    
+    CloudCmd.getConfig          = getSystemFile(Config,         CloudCmd.JSONDIR + 'config.json');
+    CloudCmd.getModules         = getSystemFile(Modules,        CloudCmd.JSONDIR + 'modules.json');
+    CloudCmd.getFileTemplate    = getSystemFile(FileTemplate,   CloudCmd.HTMLDIR + 'file.html');
+    
     
     CloudCmd.execFromModule         = function(pModuleName, pFuncName, pParams){
         var lObject     = CloudCmd[pModuleName];
@@ -579,7 +584,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
             if (lJSON){
                 /* переводим из текста в JSON */
                 lJSON = Util.parseJSON(lJSON);
-                CloudCmd._createFileTable(lPanel, lJSON, true);
+                CloudCmd._createFileTable(lPanel, lJSON);
                 CloudCmd._changeLinks(lPanel);
             }
             else
@@ -595,7 +600,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
                 },
                 
                 success : function(pData){
-                    CloudCmd._createFileTable(lPanel, pData, true);
+                    CloudCmd._createFileTable(lPanel, pData);
                     CloudCmd._changeLinks(lPanel);
                     
                     /* переводим таблицу файлов в строку, для   *
@@ -616,7 +621,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
      * @param pEleme - родительский элемент
      * @param pJSON  - данные о файлах
      */
-    CloudCmd._createFileTable        = function(pElem, pJSON, pSetCurrent){
+    CloudCmd._createFileTable        = function(pElem, pJSON){
         var lElem           = DOM.getById(pElem),
             /* getting current element if was refresh */
             lPath           = DOM.getByClass('path', lElem),
@@ -635,11 +640,12 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
             lElem.removeChild(lElem.lastChild);
         
         /* заполняем панель новыми элементами */
-        lElem.innerHTML = CloudFunc.buildFromJSON(pJSON, pSetCurrent);
+        lElem.innerHTML = CloudFunc.buildFromJSON(pJSON);
         
+        var lFound;
         /* searching current file */
         if(lWasRefresh_b){
-            var lFound, n = lElem.childNodes.length;
+            var n = lElem.childNodes.length;
             for(i = 2; i < n ; i++){
                 var lVarCurrent = lElem.childNodes[i],
                     lVarName    = DOM.getCurrentName(lVarCurrent);
@@ -651,12 +657,12 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCommander;
                     break;
                 }
             }
-            
-            if(!lFound) /* .. */
-                lCurrent = lElem.childNodes[2];
-            
-            DOM.setCurrentFile(lCurrent);
         }
+        if(!lFound) /* .. */
+            lCurrent = lElem.childNodes[2];
+            
+        DOM.setCurrentFile(lCurrent);
+        
     };
     
     /**
