@@ -106,7 +106,7 @@ var CloudFunc, exports, Util;
         }
         
         /* оставляем последние 3 символа*/
-        pPerm_s = pPerm_s.length> 5 ?pPerm_s.substr(3) : pPerm_s.substr(2);        
+        pPerm_s = pPerm_s.length > 5 ? pPerm_s.substr(3) : pPerm_s.substr(2);
         
         /* Рекомендации гугла советуют вместо string[3]
          * использовать string.charAt(3)
@@ -165,6 +165,7 @@ var CloudFunc, exports, Util;
         /* добавляем 2 цыфры до 5 */
         return '00' + lOwner + lGroup + lAll;
     };
+    
     /** Функция получает короткие размеры
      * конвертируя байт в килобайты, мегабойты,
      * гигайбайты и терабайты
@@ -294,7 +295,7 @@ var CloudFunc, exports, Util;
      * [{path:'путь',size:'dir'},
      * {name:'имя',size:'размер',mode:'права доступа'}]
      */
-    CloudFunc.buildFromJSON                 = function(pJSON, pSetCurrent)
+    CloudFunc.buildFromJSON                 = function(pJSON)
     {
         var files = pJSON,
             /* сохраняем путь каталога в котором мы сейчас находимся*/
@@ -311,7 +312,6 @@ var CloudFunc, exports, Util;
              * если он есть
              */
             lRefreshPath = CloudFunc.removeLastSlash(lPath),
-            lFS_s   = CloudFunc.FS,
             
             lFileTable = 
                 '<li class=path>'+
@@ -321,7 +321,7 @@ var CloudFunc, exports, Util;
                     '</span>'                                                   +
                     '<span class="path-icon ' + CloudFunc.REFRESHICON + '"'     +
                         ' title="refresh (Ctrl+R)">'                            +
-                            '<a href="' + lFS_s + lRefreshPath + '">' +
+                            '<a href="' + FS + lRefreshPath + '">' +
                             '</a>'                                              +
                     '</span>'                                                   +
                     '<span>' + lHtmlPath + '</span>'                            +
@@ -345,8 +345,7 @@ var CloudFunc, exports, Util;
             if(lDotDot === '')
                 lDotDot = '/';
             
-            lLink = lFS_s + lDotDot;
-            
+            lLink = FS + lDotDot;
             
             /* Сохраняем путь к каталогу верхнего уровня*/
             lFileTable += '<li draggable class>'                        +
@@ -373,7 +372,7 @@ var CloudFunc, exports, Util;
                             '">';
             lFileTable += '</span>';
             lFileTable += '<span draggable class=name>'                 +
-                            '<a href="' + lFS_s + lPath + files[i].name +
+                            '<a href="' + FS + lPath + files[i].name +
                             '"'                                         +
                             /* открываем файлы */
                             /*в новой вкладке  */
@@ -405,15 +404,6 @@ var CloudFunc, exports, Util;
             lFileTable += '</li>';
         }
         
-        /* если клавиши назначены и
-         * мы в корневом каталоге и
-         * верхний файл еще не выделен -
-         * выделяем верхний файл
-         */
-        if(pSetCurrent)
-            lFileTable = lFileTable.replace('<li draggable class>', 
-                '<li draggable class=current-file>');
-            
         return lFileTable;
     };
 })();
